--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -52,7 +52,7 @@ social:
 # Image Settings
 # --------------------------------------
 
-favicon: /img/yaojie.jpg
+favicon: /img/favicon.png
 
 avatar:
   img: /img/yaojie.jpg
