fix formula info

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -444,13 +444,12 @@ busuanzi:
 math:
   # Choose: mathjax, katex
   # Leave it empty if you don't need math
-  use:
+  use: mathjax
   per_page: true
   hide_scrollbar: false
 
   mathjax:
     enable: true
-    everty_page: true
     # Enable the contextual menu
     enableMenu: true
     # Choose: all / ams / none, This controls whether equations are numbered and how
